--- a/batch1_assessment/src/main/resources/templates/view1.html
+++ b/batch1_assessment/src/main/resources/templates/view1.html
@@ -4,14 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+      body {
+        text-align: center;
+      }
+      .trans-id {
+        color: darkblue;
+      }
+    </style>
     <title>Transaction</title>
   </head>
   <body>
     <h1 data-th-object="${transaction}">
-      Transaction from <span data-th-text="${transaction.getFromAccountId()}"></span> to
-      <span data-th-text="${transaction.getToAccountId()}"></span> with amount of
-      <span data-th-text="${transaction.getAmount()}"></span> is completed.
+      Transaction from
+      <span data-th-text="${transaction.getFromAccountId()}" class="trans-id"></span> to
+      <span data-th-text="${transaction.getToAccountId()}" class="trans-id"></span> with amount of
+      <span data-th-text="${transaction.getAmount()}" class="trans-id"></span> is completed.
     </h1>
-    <h3>Comment: <span data-th-text="${transaction.getComment()}"></span></h3>
+    <h1>Comment: <span data-th-text="${transaction.getComment()}" class="trans-id"></span></h1>
+    <h1>
+      Transaction ID:
+      <span data-th-text="${transaction.getTransactionId()}" class="trans-id"></span>
+    </h1>
+    <button><a href="/updateMongoAccounts">Back</a></button>
   </body>
 </html>
