More Aggregation with MongoDB

--- a/batch1_assessment/src/main/resources/templates/view0.html
+++ b/batch1_assessment/src/main/resources/templates/view0.html
@@ -78,5 +78,9 @@
     <div>
       <button><a href="/checkTransactions">Check Transaction History</a></button>
     </div>
+    <br />
+    <div>
+      <button><a href="/checkTransactionsByType">Check Transaction Type</a></button>
+    </div>
   </body>
 </html>
